crates/sniff-test/tests/snapshots/fixtures__driver_trusted_boundaries.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "analysis-findings": [],
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "trusted_boundaries",
      "crate-types": [
        "lib"
      ],
      "extra-filename": "[EXTRA_FILENAME]",
      "manifest-path": null,
      "metadata": "[METADATA]",
      "package-name": null,
      "package-version": null,
      "target": null
    },
    "concrete-roots": 1,
    "counts": {
      "analysis-incomplete": 0,
      "cached-dependency-panics": 0,
      "compiler-asserts": 0,
      "documented-panics": 0,
      "indirect-call-boundaries": 0,
      "panic-invocations": 0,
      "trusted-panics": 1
    },
    "dependencies": [],
    "dependency-cache": {
      "failed": 0,
      "hits": 0,
      "total": 0
    },
    "format-version": 2,
    "generic-roots": 0,
    "reason": "sniff-test-artifact",
    "roots": [
      {
        "counts": {
          "analysis-incomplete": 0,
          "cached-dependency-panics": 0,
          "compiler-asserts": 0,
          "documented-panics": 0,
          "indirect-call-boundaries": 0,
          "panic-invocations": 0,
          "trusted-panics": 1
        },
        "findings": [
          {
            "edge": "trusted_boundaries::trusted_with_docs --direct-call-> trusted_boundaries::trusted_doc_helper",
            "kind": "trusted-panic",
            "level": "warn",
            "reason": "trusted_boundaries::trusted_doc_helper documents when it may panic under # Panics",
            "span": "[FIXTURE]/src/lib.rs:6:5: 6:29",
            "target": "trusted_boundaries::trusted_doc_helper",
            "trace": [
              "[FIXTURE]/src/lib.rs:6:5: 6:29: trusted_boundaries::trusted_with_docs --direct-call-> trusted_boundaries::trusted_doc_helper"
            ]
          }
        ],
        "has-panic-docs": false,
        "root": "trusted_boundaries::trusted_with_docs",
        "root-declaration": "[FIXTURE]/src/lib.rs:5:1",
        "root-kind": "concrete"
      }
    ],
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
