crates/sniff-test/tests/snapshots/fixtures__driver_unsafe_closure_inherit.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "unsafe_closure_inherit"
    },
    "dependencies": [],
    "findings": [
      {
        "function": "unsafe_closure_inherit::unjustified_closure::{closure#0}",
        "kind": "unsafe-call-missing-justification",
        "level": "warn",
        "reason": "unsafe call to `unsafe_closure_inherit::dangerous` has no `// SAFETY:` justification",
        "root": "unsafe_closure_inherit::unjustified_closure",
        "root-kind": "concrete",
        "span": "[FIXTURE]/src/lib.rs:12:13: 12:24",
        "target": "unsafe_closure_inherit::dangerous",
        "trace": [
          "[FIXTURE]/src/lib.rs:12:9: 12:27: unsafe_closure_inherit::unjustified_closure --direct-call-> unsafe_closure_inherit::unjustified_closure::{closure#0}"
        ]
      }
    ],
    "format-version": 6,
    "reason": "sniff-test-artifact",
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
