crates/sniff-test/tests/snapshots/fixtures__driver_unsafe_const_init.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "unsafe_const_init",
      "crate-types": [
        "lib"
      ],
      "extra-filename": "[EXTRA_FILENAME]",
      "manifest-path": null,
      "metadata": "[METADATA]",
      "package-name": null,
      "package-version": null,
      "target": null
    },
    "concrete-roots": 0,
    "counts": {
      "analysis-incomplete": 0,
      "indirect-call-boundaries": 0,
      "panic-obligations": 0,
      "raw-panic-paths": 0,
      "trusted-panic-obligations": 0
    },
    "dependencies": [],
    "dependency-cache": {
      "failed": 0,
      "hits": 0,
      "total": 0
    },
    "format-version": 1,
    "generic-roots": 0,
    "missing-roots": [],
    "reason": "sniff-test-artifact",
    "roots": [],
    "rustc-version": "[RUSTC_VERSION]",
    "safety": {
      "counts": {
        "missing-safety-docs": 0,
        "safety-obligations-missing-justification": 0,
        "safety-obligations-missing-requirements": 0,
        "unsafe-calls-missing-justification": 2,
        "unsafe-calls-missing-requirements": 0,
        "unsafe-ops-missing-justification": 0
      },
      "findings": [
        {
          "function": "unsafe_const_init::UNJUSTIFIED_STATIC",
          "kind": "unsafe-call-missing-justification",
          "level": "warn",
          "reason": "unsafe call to `unsafe_const_init::seeded` has no `// SAFETY:` justification",
          "span": "[FIXTURE]/src/lib.rs:5:47: 5:55",
          "target": "unsafe_const_init::seeded"
        },
        {
          "function": "unsafe_const_init::UNJUSTIFIED_CONST",
          "kind": "unsafe-call-missing-justification",
          "level": "warn",
          "reason": "unsafe call to `unsafe_const_init::seeded` has no `// SAFETY:` justification",
          "span": "[FIXTURE]/src/lib.rs:11:45: 11:53",
          "target": "unsafe_const_init::seeded"
        }
      ]
    },
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
