crates/sniff-test/tests/snapshots/fixtures__driver_visibility_roots.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "visibility_roots"
    },
    "dependencies": [],
    "findings": [
      {
        "function": "visibility_roots::reachable_unsafe",
        "kind": "unsafe-op-missing-justification",
        "level": "warn",
        "reason": "unsafe operation (raw pointer dereference) has no `// SAFETY:` justification",
        "root": "visibility_roots::public_unsafe_entry",
        "root-kind": "concrete",
        "span": "[FIXTURE]/src/lib.rs:22:14: 22:22",
        "trace": [
          "[FIXTURE]/src/lib.rs:18:5: 18:30: visibility_roots::public_unsafe_entry --direct-call-> visibility_roots::reachable_unsafe"
        ]
      },
      {
        "kind": "panic-invocation",
        "level": "deny",
        "reason": "panic sink core::std::rt::panic_fmt",
        "root": "visibility_roots::imp::exported",
        "root-kind": "concrete",
        "span": "[FIXTURE]/src/lib.rs:7:9: 7:53",
        "target": "core::std::rt::panic_fmt",
        "trace": [
          "[FIXTURE]/src/lib.rs:7:9: 7:53: visibility_roots::imp::exported --macro-expansion-> macro core::std::assert",
          "[FIXTURE]/src/lib.rs:7:9: 7:53: macro core::std::assert --macro-expansion-> macro core::std::panic::panic_2021",
          "[SYSROOT]/lib/rustlib/src/rust/library/core/src/panic.rs:62:9: 62:73: macro core::std::panic::panic_2021 --direct-call-> core::std::rt::panic_fmt"
        ]
      },
      {
        "kind": "panic-invocation",
        "level": "deny",
        "reason": "panic sink core::std::rt::panic_fmt",
        "root": "visibility_roots::public_entry",
        "root-kind": "concrete",
        "span": "[FIXTURE]/src/lib.rs:3:9: 3:51",
        "target": "core::std::rt::panic_fmt",
        "trace": [
          "[FIXTURE]/src/lib.rs:14:5: 14:22: visibility_roots::public_entry --direct-call-> visibility_roots::imp::hidden",
          "[FIXTURE]/src/lib.rs:3:9: 3:51: visibility_roots::imp::hidden --macro-expansion-> macro core::std::assert",
          "[FIXTURE]/src/lib.rs:3:9: 3:51: macro core::std::assert --macro-expansion-> macro core::std::panic::panic_2021",
          "[SYSROOT]/lib/rustlib/src/rust/library/core/src/panic.rs:62:9: 62:73: macro core::std::panic::panic_2021 --direct-call-> core::std::rt::panic_fmt"
        ]
      },
      {
        "kind": "compiler-assert",
        "level": "deny",
        "reason": "compiler assert",
        "root": "visibility_roots::public_unsafe_entry",
        "root-kind": "concrete",
        "span": "[FIXTURE]/src/lib.rs:22:14: 22:22",
        "target": "compiler assert null pointer dereference",
        "trace": [
          "[FIXTURE]/src/lib.rs:18:5: 18:30: visibility_roots::public_unsafe_entry --direct-call-> visibility_roots::reachable_unsafe",
          "[FIXTURE]/src/lib.rs:22:14: 22:22: visibility_roots::reachable_unsafe --assert-> compiler assert null pointer dereference"
        ]
      }
    ],
    "format-version": 7,
    "reason": "sniff-test-artifact",
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
